// Schema para ObraCero — CRM multi-tenant con agente IA
// Cada organización ve solo sus propios datos (organizationId) en todas las tablas.
generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x", "linux-arm64-openssl-3.0.x"]
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// ═══════════════════════════════════════════════════════════════
// MULTI-TENANT — ORGANIZACIONES Y USUARIOS
// ═══════════════════════════════════════════════════════════════

model Organization {
  id        String   @id @default(cuid())
  name      String
  slug      String   @unique // Identificador URL-friendly
  plan      String   @default("free") // free | pro | enterprise
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  members   OrganizationMember[]
  projects  Project[]
  transactions Transaction[]
  tasks     Task[]
  suppliers Supplier[]
  materials Material[]
  stockMovements StockMovement[]
  automationRules AutomationRule[]
  workflows Workflow[]
  agentSchedules AgentSchedule[]
  agentActions AgentAction[]
  agentMessages AgentMessage[]

  @@index([slug])
}

model User {
  id           String   @id @default(cuid())
  email        String   @unique
  passwordHash String
  name         String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  memberships OrganizationMember[]

  @@index([email])
}

model OrganizationMember {
  id             String   @id @default(cuid())
  organizationId String
  userId         String
  role           String   @default("admin") // admin | editor | viewer
  createdAt      DateTime @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([organizationId, userId])
  @@index([userId])
  @@index([organizationId])
}

// ═══════════════════════════════════════════════════════════════
// DOMINIO — Todas las entidades con organizationId
// ═══════════════════════════════════════════════════════════════

// ─── PROYECTOS / OBRAS ───────────────────────────────────────

model Project {
  id          String    @id @default(cuid())
  organizationId String
  code        String    // OB-001, OB-002, ... (unique por org)
  name        String
  description String?
  address     String?
  status      String    @default("planning") // planning | in_progress | paused | completed | cancelled
  type        String    @default("obra") // obra | remodelacion | proyecto
  budget      Float     @default(0)
  progress    Float     @default(0) // 0-100
  clientName  String?
  clientPhone String?
  clientEmail String?
  startDate   DateTime?
  endDate     DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  transactions Transaction[]
  tasks        Task[]

  @@unique([organizationId, code])
  @@index([organizationId, status])
  @@index([organizationId, createdAt])
  @@index([organizationId, name])
}

// ─── TRANSACCIONES FINANCIERAS ───────────────────────────────

model Transaction {
  id          String    @id @default(cuid())
  organizationId String
  type        String    // income | expense
  category    String    // materiales | mano_de_obra | servicios | venta | anticipo | otros
  description String
  amount      Float
  date        DateTime  @default(now())
  method      String?   @default("transferencia") // efectivo | transferencia | cheque | tarjeta
  recurring   String?   // mensual | semanal | etc.
  projectId   String?
  supplierId  String?
  createdAt   DateTime  @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  project  Project?  @relation(fields: [projectId], references: [id], onDelete: SetNull)
  supplier Supplier? @relation(fields: [supplierId], references: [id], onDelete: SetNull)

  @@index([organizationId, type, date])
  @@index([organizationId, projectId, date])
  @@index([organizationId, supplierId])
  @@index([organizationId, category])
  @@index([organizationId, date])
}

// ─── TAREAS ───────────────────────────────────────────────────

model Task {
  id          String    @id @default(cuid())
  organizationId String
  title       String
  description String?
  status      String    @default("pending") // pending | in_progress | completed | cancelled
  priority    String    @default("medium")  // low | medium | high | critical
  assignee    String?
  dueDate     DateTime?
  projectId   String?
  createdBy   String?   @default("user")
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  project Project? @relation(fields: [projectId], references: [id], onDelete: SetNull)

  @@index([organizationId, status, dueDate])
  @@index([organizationId, projectId])
  @@index([organizationId, assignee])
  @@index([organizationId, dueDate])
}

// ─── PROVEEDORES ─────────────────────────────────────────────

model Supplier {
  id          String   @id @default(cuid())
  organizationId String
  name     String
  contact  String?
  phone    String?
  email    String?
  taxId    String? // CUIT/RUT
  category String? // materiales | servicios | transporte | etc.
  rating   Float   @default(3) // 1-5
  notes    String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  organization   Organization   @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  transactions  Transaction[]
  materials     Material[]
  stockMovements StockMovement[]

  @@index([organizationId, name])
  @@index([organizationId, category])
}

// ─── MATERIALES / INVENTARIO ─────────────────────────────────

model Material {
  id         String  @id @default(cuid())
  organizationId String
  sku        String
  name       String
  category   String  @default("general")
  unit       String  @default("unidad") // kg | m2 | m3 | litro | unidad | etc.
  unitCost   Float   @default(0)
  unitPrice  Float   @default(0)
  stock      Float   @default(0)
  minStock   Float   @default(0)
  maxStock   Float?
  location   String?
  supplierId String?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  organization   Organization   @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  supplier       Supplier?       @relation(fields: [supplierId], references: [id], onDelete: SetNull)
  stockMovements StockMovement[]

  @@unique([organizationId, sku])
  @@index([organizationId, supplierId])
  @@index([organizationId, category])
  @@index([organizationId, stock])
  @@index([organizationId, name])
}

// ─── MOVIMIENTOS DE STOCK ─────────────────────────────────────

model StockMovement {
  id         String   @id @default(cuid())
  organizationId String
  type       String   // incoming | outgoing | adjustment
  quantity   Float
  unitCost   Float    @default(0)
  reason     String?  // compra | consumo | ajuste | devolucion
  note       String?
  date       DateTime @default(now())
  materialId String
  supplierId String?

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  material Material  @relation(fields: [materialId], references: [id], onDelete: Cascade)
  supplier Supplier? @relation(fields: [supplierId], references: [id], onDelete: SetNull)

  @@index([organizationId, materialId, date])
  @@index([organizationId, type])
}

// ─── REGLAS DE AUTOMATIZACIÓN ─────────────────────────────────

model AutomationRule {
  id          String   @id @default(cuid())
  organizationId String
  name        String
  description String?
  trigger     String   // stock_low | budget_exceeded | overdue_task | monthly_expense | etc.
  condition   String?  // JSON con parámetros de la condición
  action      String   @default("alert") // alert | notify | task
  enabled     Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@index([organizationId, trigger, enabled])
}

// ─── WORKFLOWS / FLUJOS DE AUTOMATIZACIÓN ────────────────────

model Workflow {
  id          String   @id @default(cuid())
  organizationId String
  name        String
  description String?
  trigger     String   @default("manual") // manual | schedule | event | webhook
  triggerConfig String? @db.Text // JSON: cron expression, event type, params
  enabled     Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  steps      WorkflowStep[]
  executions WorkflowExecution[]

  @@index([organizationId, trigger, enabled])
}

model WorkflowStep {
  id         String   @id @default(cuid())
  workflowId String
  type       String   // trigger | condition | action | delay | loop | send_email | webhook
  label      String?
  config     String   @db.Text // JSON con configuración del paso
  order      Float    // Permite insertar pasos entre otros
  parentId   String?  // Para condiciones anidadas (if/else)
  createdAt  DateTime @default(now())

  workflow Workflow @relation(fields: [workflowId], references: [id], onDelete: Cascade)
}

model WorkflowExecution {
  id          String    @id @default(cuid())
  workflowId  String
  status      String    @default("pending") // pending | running | completed | failed | cancelled
  startedAt   DateTime  @default(now())
  completedAt DateTime?
  log         String?   @db.Text // JSON array: [{ step, status, data, error }]
  error       String?   @db.Text
  triggeredBy String?   // "manual" | "schedule" | "event" | "webhook"

  workflow Workflow @relation(fields: [workflowId], references: [id], onDelete: Cascade)

  @@index([workflowId, startedAt])
  @@index([status])
}

// ─── AGENDA / SCHEDULER DEL AGENTE AUTÓNOMO ───────────────────

model AgentSchedule {
  id          String   @id @default(cuid())
  organizationId String
  name        String
  type        String   // check_alerts | run_workflow | send_report | analyze
  config      String   @db.Text // JSON: parámetros específicos
  cron        String   // expresión cron: "*/5 * * * *" = cada 5 min
  lastRun     DateTime?
  nextRun     DateTime?
  enabled     Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@index([organizationId, nextRun])
  @@index([organizationId, enabled, nextRun])
}

// ─── ACCIONES DEL AGENTE IA ───────────────────────────────────

model AgentAction {
  id          String   @id @default(cuid())
  organizationId String
  type        String   // alert | task | reorder | highlight | audit
  severity    String   @default("info") // info | warning | critical
  title       String
  description String
  payload     String?  // JSON serializado
  status      String   @default("active") // active | resolved | dismissed
  createdAt   DateTime @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@index([organizationId, type, status])
  @@index([organizationId, createdAt])
}

// ─── HISTORIAL DE CONVERSACIÓN DEL AGENTE ────────────────────

model AgentMessage {
  id        String   @id @default(cuid())
  organizationId String
  role      String   // user | agent
  content   String   @db.Text
  intent    String?
  meta      String?  @db.Text // JSON con datos adicionales
  createdAt DateTime @default(now())

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)

  @@index([organizationId, createdAt])
}
